fixes issue with jumbotron spacing and background

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -16,9 +16,11 @@ h5{
 }
 
 .jumbotron {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    margin-bottom: 0px;
+    background-position: 0% 25%;
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar{
@@ -34,45 +36,9 @@ h5{
 .navbar-brand{
   font-family: 'Freckle Face';
   font-size: 40px;
-  color: orange;
+  color: #FF8C00;
 }
 
-.jumbotron{
- background-image: url(‘images/TheGrimLogoTransparent.png’);
- background-size: cover;
- background-repeat: no-repeat;
-}
-
-.jumbotron-fluid .img {
-    margin-bottom: 0px;
-    opacity: 0.2;
-    color: #fff;
-    background: top center no-repeat;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    overflow: hidden;
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:1;
-}
-.jumbotron h2 {margin-top:0;}
-.jumbotron {
-  position:relative;
-  padding-top:50px;
-  padding-bottom:50px;
-}
-.jumbotron .container {
-  position:relative;
-  z-index:2;
-}
-@media screen and (max-width: 768px) {
-  .jumbotron {
-    padding-top:20px;
-    padding-bottom:20px;
-  }
-}
 
 /* The sidebar menu */
 .sidenav {
